[project]
name = "fer-2013"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imagehash>=4.3.2",
    "ipykernel>=7.3.0",
    "kaggle>=2.2.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
]
